@@ -1,3 +1,7 @@
+Fri Mar 18 13:23:47 CET 2011
+	Removing MSG_DONTWAIT which should not be needed and was presumably
+	causing problems with EAGAIN under certain circumstances. -ES
+
 Fri Mar 11 22:25:29 CET 2011
 	Fixing bug in MHD_create_response_from_fd_at_offset with non-zero offsets. -ES
 
